--- a/index.html
+++ b/index.html
@@ -6,7 +6,29 @@
     <link rel="stylesheet" href="styles/style.css">
     <title>Document</title>
 </head>
-<body>
-    
+<body class="poppins">
+
+    <header>
+        <div>
+            <h2 class="header-tittle yeseva">Stay Focused on<br><span>Mission 2022</span></h2>
+            <p class="common-text-b">Staying focused on a mission requires a clear vision, consistent effort, and effective strategies.</p>
+            <button class="common-btn">Explore Now</button>
+            <p class="common-text-s">Scroll down to explore more about us</p>
+        </div>
+        <div>
+            <img src="images/person-2.png" alt="mission 2022">
+        </div>
+    </header>
+
+    <main>
+        <section class="sec-1">
+            <h3 class="sec-1-tittle">My Mission in <span>2022</span></h3>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
+
 </body>
 </html>
