Mission 2022 done with responsive mobile device

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Document</title>
+    <title>Mission 2022</title>
 </head>
 <body class="poppins">
 
@@ -23,11 +23,75 @@
     <main>
         <section class="sec-1">
             <h3 class="sec-1-tittle">My Mission in <span>2022</span></h3>
+            <div class="sec-1-card-box">
+                <div class="card box-1">
+                  <div>
+                    <img src="images/illustrator-1.png" alt="">
+                    <h4>Mission</h4>
+                    <p class="common-text-s">A mission is a clear, concise statement that defines an organization’s purpose, goals, and the impact it aims to achieve.</p>
+                  </div>
+                </div>
+                <div class="card box-2">
+                    <div>
+                        <img src="images/illustrator-2.png" alt="">
+                        <h4>Vision</h4>
+                        <p class="common-text-s">A vision is a future-oriented statement that guides and inspires long-term goals, reflecting aspirations and desired impact.</p>
+                    </div>
+                </div>
+                <div class="card box-3">
+                    <div>
+                        <img src="images/illustrator-3.png" alt="">
+                        <h4>Goals</h4>
+                        <p class="common-text-s">Goals are clear, measurable targets that drive actions and efforts towards achieving specific personal or organizational objectives.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="sec-2">
+            <div class="slide-1">
+                <div>
+                    <img class="slide-ring-1" src="images/shape-1.png" alt="ring shape">
+                    <img class="slide-img-1" src="images/coding.png" alt="Codding">
+                </div>
+                <div class="slide-text-box">
+                    <h2>Develop<br>Without Limits</h2>
+                    <p class="common-text-b">"Develop Without Limits" encourages continuous growth and innovation, pushing boundaries to achieve excellence and unlock potential without being constrained by traditional limitations or barriers.</p>
+                    <button class="common-btn">Read the Documentation</button>
+                </div>
+            </div>
+            <div class="slide-2">
+                <div class="slide-text-box">
+                    <h2>Know our<br>Global Community</h2>
+                    <p class="common-text-b">"Know our Global Community" emphasizes understanding and connecting with diverse cultures and perspectives, fostering inclusivity, collaboration, and shared growth across international boundaries.</p>
+                    <button class="common-btn">Read the Documentation</button>
+                </div>
+                <div>
+                    <img class="slide-img-2" src="images/project.png" alt="Project">
+                    <img class="slide-ring-2" src="images/shape-1.png" alt="ring shape">
+                </div>
+            </div>
+        </section>
+        <section class="sec-3">
+            <h3 class="sec-3-tittle">Build <span>Corona Application</span></h3>
+            <div class="slide-app">
+                <div>
+                    <img class="app-img" src="images/app.png" alt="Application">
+                    <img class="c1" src="images/shape-3.png" alt="">
+                    <img class="c2" src="images/shape-3.png" alt="">
+                    <img class="c3" src="images/shape-3.png" alt="">
+                </div>
+                <div class="app-text-box">
+                        <h4 class="sec-3-tittle">Stay safe with<br>Go<span>Corona.</span></h4>
+                        <p class="common-text-b">"Stay safe with GoCorona app" promotes health and safety by providing real-time updates, tracking, and resources to help users navigate the COVID-19 pandemic effectively and responsibly.</p>
+                        <button class="common-btn">App Features</button>
+                </div>
+            </div>
         </section>
     </main>
 
     <footer>
-
+        <h3 class="lobster">Mission <span>2022</span></h3>
+        <p class="manrope">Hard work, Perseverance, and Determination for 2022</p>
     </footer>
 
 </body>
